Fix wrong North Macedonia translation

--- a/po/fr.po
+++ b/po/fr.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-08-06 08:40+0200\n"
-"PO-Revision-Date: 2021-08-06 08:53+0200\n"
+"PO-Revision-Date: 2021-08-06 20:02+0200\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
 "Language: fr\n"
@@ -5642,7 +5642,7 @@ msgid "North"
 msgstr "Nord"
 
 msgid "North Macedonia (The Republic of)"
-msgstr "Macédoine du Nord (La république de)"
+msgstr "Macédoine du Nord (République de)"
 
 msgid "Northern Mariana Islands"
 msgstr "Iles Mariannes du Nord"
