--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -348,8 +348,8 @@ msgid "%s %d.%d"
 msgstr ""
 
 #, python-format
-msgid "%s %s free disk space"
-msgstr "%s %s 空闲空间"
+msgid "%(freespace)s %(percent)s free disk space"
+msgstr "%(freespace)s %(percent)s 空闲空间"
 
 #, python-format
 msgid "%s (%s)\n"
