[ChannelSelection] Optimized string for translation
Not sure why a 4 variable string (%d.%d%s%s) was needed to display the orbital position... This was misleading (couple of translations had errors) and was producing the following warning as well:

'msgid' format string with unnamed arguments cannot be properly localized:
The translator cannot reorder the arguments.
Please consider using a format string with named arguments,
and a mapping instead of a tuple for the arguments.

The new string is using already existing ones for the orbital position ("%.1f° W" and %.1f° E) and is much simpler (only one variable is used for the orbital posiiton in the final string).

All existing translations are updated as needed.

--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -1054,8 +1054,8 @@ msgid "Are you sure to reboot to"
 msgstr "你确定要重新启动到"
 
 #, python-format
-msgid "Are you sure to remove all %d.%d%s%s services?"
-msgstr "你确定要移除所有 %d.%d%s%s 频道吗？"
+msgid "Are you sure to remove all %s services?"
+msgstr "你确定要移除所有 %s 频道吗？"
 
 msgid "Are you sure to remove all cable services?"
 msgstr "你确定要移除所有有线电视频道吗？"
