--- a/po/uk.po
+++ b/po/uk.po
@@ -368,7 +368,7 @@ msgstr "%s %d.%d"
 
 #, python-format
 msgid "%(freespace)s %(percent)s free disk space"
-msgstr "%(freespace)s %(percent)s вільне місце на диску"
+msgstr "%(вільного місця) %(процент)-ів вільного місця на диску"
 
 #, python-format
 msgid "%s (%s)\n"
@@ -8893,7 +8893,7 @@ msgstr ""
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
 msgid "TRANSLATOR_INFO"
 msgstr ""
-"Переклад:  kvinto - 13.08.2021\n"
+"Переклад:  kvinto - 21.08.2021\n"
 "Сторінка:    https://gisclub.tv\n"
 "                  kvinto@rambler.ru"
 
