--- a/po/uk.po
+++ b/po/uk.po
@@ -3955,6 +3955,9 @@ msgstr "Додаткові опції"
 msgid "G"
 msgstr "G"
 
+msgid "GB"
+msgstr "ГБ"
+
 msgid "GUI Settings"
 msgstr "Налаштування GUI"
 
@@ -4140,10 +4143,10 @@ msgid "HD2400"
 msgstr "HD2400"
 
 msgid "HD60/Multibox/Multibox SE"
-msgstr ""
+msgstr "HD60/Multibox/Multibox SE"
 
 msgid "HDMI"
-msgstr ""
+msgstr "HDMI"
 
 msgid "HDMI Colordepth"
 msgstr "Глибина кольору HDMI"
@@ -4167,19 +4170,19 @@ msgid "HDMI-CEC setup"
 msgstr "Налаштування HDMI-CEC"
 
 msgid "HDR10"
-msgstr ""
+msgstr "HDR10"
 
 msgid "HDR10 support"
 msgstr "Підтримка HDR10"
 
 msgid "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
-msgstr ""
+msgstr "HDx1/HD1xxx/HD5x0C/VS1x00/et7x00/et8500/et7000mini"
 
 msgid "HELP"
 msgstr "ДОПОМОГА"
 
 msgid "HLG"
-msgstr ""
+msgstr "HLG"
 
 msgid "HLG support"
 msgstr "Підтримка HLG"
@@ -4969,6 +4972,9 @@ msgstr "Люксембург"
 
 msgid "Luxembourgish"
 msgstr "Люксембурзька"
+
+msgid "MB"
+msgstr "МБ"
 
 msgid "MMC card"
 msgstr "MMC карта"
@@ -7092,7 +7098,7 @@ msgid "SCR Unicable"
 msgstr ""
 
 msgid "SDR"
-msgstr ""
+msgstr "SDR"
 
 msgid "SINGLE LAYER DVD"
 msgstr "Одношаровий DVD"
@@ -8042,7 +8048,7 @@ msgid "Show media player on main menu"
 msgstr "Показати програвач у головному меню"
 
 msgid "Show menu or plugin numbers"
-msgstr "Показати меню або номери плагіна"
+msgstr "Показати нумерацію в меню, або в плагінах"
 
 msgid "Show message when recording starts"
 msgstr "Показати повідомлення при початку запису"
@@ -8093,7 +8099,7 @@ msgid "Show satellites list"
 msgstr "Показати список супутників"
 
 msgid "Show screen path"
-msgstr "Показати шлях до екранного меню"
+msgstr "Відображати шлях у меню"
 
 msgid "Show screensaver"
 msgstr "Показати заставку"
@@ -8893,7 +8899,7 @@ msgstr ""
 #. TRANSLATORS: Add here whatever should be shown in the "translator" about screen, up to 6 lines (use \n for newline)
 msgid "TRANSLATOR_INFO"
 msgstr ""
-"Переклад:  kvinto - 21.08.2021\n"
+"Переклад:  kvinto - 22.08.2021\n"
 "Сторінка:    https://gisclub.tv\n"
 "                  kvinto@rambler.ru"
 
@@ -9186,7 +9192,7 @@ msgid "This is the order in which DiSEqC commands are sent to the aerial system.
 msgstr "Це порядок передачі команд DiSEqC в систему. Порядок повинен точно відповідати порядку, коли фізичні пристрої розташовані вздовж сигнального кабелю (починаючи з кінця приймача)."
 
 msgid "This not valid ONID/TSID"
-msgstr ""
+msgstr "Це недійсні значення ONID/TSID"
 
 msgid "This option allows to reduce the block-noise in the picture. Obviously this is at the cost of the picture's sharpness."
 msgstr "Опція служить для зниження шумів на зображенні. Це відбувається за рахунок різкості зображення."
