--- a/po/fa.po
+++ b/po/fa.po
@@ -2896,7 +2896,7 @@ msgid "Directory browser"
 msgstr "مرورگر شاخه"
 
 #, fuzzy, python-format
-msgid "Directory contains %s and %s."
+msgid "Directory contains %(file)s and %(subdir)s."
 msgstr "پوشه %s وجود ندارد"
 
 msgid "Disable"
