--- a/po/fy.po
+++ b/po/fy.po
@@ -3221,7 +3221,7 @@ msgstr ""
 
 #
 #, fuzzy, python-format
-msgid "Directory contains %s and %s."
+msgid "Directory contains %(file)s and %(subdir)s."
 msgstr "Map %s bestiit net"
 
 #
