--- a/po/hr.po
+++ b/po/hr.po
@@ -2834,8 +2834,8 @@ msgid "Directory browser"
 msgstr "Imenik preglednika"
 
 #, python-format
-msgid "Directory contains %s and %s."
-msgstr "Direktorij sadrži %s i %s."
+msgid "Directory contains %(file)s and %(subdir)s."
+msgstr "Direktorij sadrži %(file)s i %(subdir)s."
 
 msgid "Disable"
 msgstr "Onemogućite"
