--- a/po/is.po
+++ b/po/is.po
@@ -3075,7 +3075,7 @@ msgstr "Möppu vafri"
 
 #
 #, fuzzy, python-format
-msgid "Directory contains %s and %s."
+msgid "Directory contains %(file)s and %(subdir)s."
 msgstr "Mappa %s ekki til."
 
 #
