--- a/po/nn.po
+++ b/po/nn.po
@@ -3096,8 +3096,8 @@ msgid "Directory browser"
 msgstr "Søk i kataloger"
 
 #, python-format
-msgid "Directory contains %s and %s."
-msgstr "Katalogen inneholder %s og %s."
+msgid "Directory contains %(file)s and %(subdir)s."
+msgstr "Katalogen inneholder %(file)s og %(subdir)s."
 
 #
 msgid "Disable"
