--- a/po/sr.po
+++ b/po/sr.po
@@ -3272,7 +3272,7 @@ msgstr "Pretraživač direktorijuma"
 
 #
 #, fuzzy, python-format
-msgid "Directory contains %s and %s."
+msgid "Directory contains %(file)s and %(subdir)s."
 msgstr "Direktorijum %s ne postoji"
 
 #
