--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -2820,7 +2820,7 @@ msgid "Directory browser"
 msgstr "目錄流覽"
 
 #, python-format
-msgid "Directory contains %s and %s."
+msgid "Directory contains %(file)s and %(subdir)s."
 msgstr ""
 
 msgid "Disable"
