[StartWizard] Reworked string
No need to offer the percentage (progress of installation, e.g. 50%) for translation...

--- a/po/es.po
+++ b/po/es.po
@@ -402,8 +402,8 @@ msgstr[1] "%s actualizaciones disponibles."
 
 #
 #, python-format
-msgid "%s%% Autoinstalling %s"
-msgstr "% s %% Autoinstalación% s"
+msgid "Autoinstalling %s"
+msgstr "Autoinstalación %s"
 
 #, python-format
 msgid "%s%d min"
