--- a/po/ro.po
+++ b/po/ro.po
@@ -371,7 +371,7 @@ msgstr[0] ""
 msgstr[1] ""
 
 #, fuzzy, python-format
-msgid "%s%% Autoinstalling %s"
+msgid "Autoinstalling %s"
 msgstr "Instaleaza"
 
 #, python-format
