--- a/po/da.po
+++ b/po/da.po
@@ -394,7 +394,7 @@ msgstr[1] "%s  opdateringer tilgængelige"
 
 #
 #, fuzzy, python-format
-msgid "%s%% Autoinstalling %s"
+msgid "Autoinstalling %s"
 msgstr "Installerer"
 
 #, python-format
