--- a/po/en.po
+++ b/po/en.po
@@ -370,7 +370,7 @@ msgstr[0] "%s updated package available"
 msgstr[1] "%s updated packages available"
 
 #, fuzzy, python-format
-msgid "%s%% Autoinstalling %s"
+msgid "Autoinstalling %s"
 msgstr "Installing"
 
 #, python-format
