--- a/po/fa.po
+++ b/po/fa.po
@@ -361,7 +361,7 @@ msgid_plural "%s updated packages available"
 msgstr[0] "به روز رسانی های در دسترس"
 
 #, fuzzy, python-format
-msgid "%s%% Autoinstalling %s"
+msgid "Autoinstalling %s"
 msgstr "در حال نصب"
 
 #, python-format
