--- a/po/fy.po
+++ b/po/fy.po
@@ -394,7 +394,7 @@ msgstr[1] ""
 
 #
 #, fuzzy, python-format
-msgid "%s%% Autoinstalling %s"
+msgid "Autoinstalling %s"
 msgstr "Oan it ynstallearjen"
 
 #, python-format
