--- a/po/gl.po
+++ b/po/gl.po
@@ -403,8 +403,8 @@ msgstr[1] "%s actualizacións dispoñibles"
 
 #
 #, python-format
-msgid "%s%% Autoinstalling %s"
-msgstr "%s%% Autoinstalando %s"
+msgid "Autoinstalling %s"
+msgstr "Autoinstalando %s"
 
 #, python-format
 msgid "%s%d min"
