--- a/po/he.po
+++ b/po/he.po
@@ -387,7 +387,7 @@ msgstr[0] "עדכונים זמינים"
 msgstr[1] "עדכונים זמינים"
 
 #, fuzzy, python-format
-msgid "%s%% Autoinstalling %s"
+msgid "Autoinstalling %s"
 msgstr "מתקין"
 
 #, python-format
