--- a/po/nn.po
+++ b/po/nn.po
@@ -381,7 +381,7 @@ msgstr[1] "%s oppdaterte programvarepakker er tilgjengelig"
 
 #
 #, fuzzy, python-format
-msgid "%s%% Autoinstalling %s"
+msgid "Autoinstalling %s"
 msgstr "Installerer"
 
 #
