--- a/po/pt.po
+++ b/po/pt.po
@@ -392,7 +392,7 @@ msgstr[1] "%s actualizações disponíveis."
 
 #
 #, fuzzy, python-format
-msgid "%s%% Autoinstalling %s"
+msgid "Autoinstalling %s"
 msgstr "A instalar"
 
 #, python-format
