--- a/po/sk.po
+++ b/po/sk.po
@@ -392,8 +392,8 @@ msgstr[1] "%s aktualizované balíčky k dispozícii"
 msgstr[2] "%s aktualizovaných balíčkov k dispozícii"
 
 #, python-format
-msgid "%s%% Autoinstalling %s"
-msgstr "%s%% Autoinštalácia %s"
+msgid "Autoinstalling %s"
+msgstr "Autoinštalácia %s"
 
 #, python-format
 msgid "%s%d min"
