--- a/po/sl.po
+++ b/po/sl.po
@@ -420,7 +420,7 @@ msgstr[3] "%s nadgradenj na voljo."
 
 #
 #, fuzzy, python-format
-msgid "%s%% Autoinstalling %s"
+msgid "Autoinstalling %s"
 msgstr "Nameščam..."
 
 #
