--- a/po/sr.po
+++ b/po/sr.po
@@ -408,7 +408,7 @@ msgstr[2] "ažuriranja dostupna."
 
 #
 #, fuzzy, python-format
-msgid "%s%% Autoinstalling %s"
+msgid "Autoinstalling %s"
 msgstr "Instaliram"
 
 #, python-format
