[SoftwareManager] Use same formatting for same text messages
Why use two different ways to format the same text message? Just make life easier for translators by removing redundant strings.
Also fix a small typo in another string and update the translations as needed.

--- a/po/ar.po
+++ b/po/ar.po
@@ -9783,8 +9783,8 @@ msgid "There are at least "
 msgstr "يوجد على الأقل "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "هناك على الأقل %s تحديثات متاحة."
+msgid "There are at least %d updates available."
+msgstr "هناك على الأقل %d تحديثات متاحة."
 
 msgid "There are currently no outstanding actions."
 msgstr "لا يوجد حاليا أي إجراءات معلقة."
@@ -10577,7 +10577,7 @@ msgstr "فشل التحديث. الخاص بك %s %s لم يكون لها اتص
 msgid "Update has completed."
 msgstr "اكتمل النسخ الاحتياطي."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "تغذية التحديث غير متوفرة."
 
 #, fuzzy
