--- a/po/bg.po
+++ b/po/bg.po
@@ -9126,8 +9126,8 @@ msgid "There are at least "
 msgstr "Има най-малко "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Има %s достъпни актуализации."
+msgid "There are at least %d updates available."
+msgstr "Има %d достъпни актуализации."
 
 msgid "There are currently no outstanding actions."
 msgstr "В момента няма належащи действия."
@@ -9843,7 +9843,7 @@ msgstr "Неуспешна актуализация. Приемникът ням
 msgid "Update has completed."
 msgstr "Актуализацията завърши."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Няма наличен фийд за актуализации."
 
 msgid "Updating"
