--- a/po/cs.po
+++ b/po/cs.po
@@ -10507,8 +10507,8 @@ msgstr "Existuje nejméně "
 
 #
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "K dispozici je nejméně %s aktualizací."
+msgid "There are at least %d updates available."
+msgstr "K dispozici je nejméně %d aktualizací."
 
 #
 msgid "There are currently no outstanding actions."
@@ -11325,7 +11325,7 @@ msgid "Update has completed."
 msgstr "Aktualizace je dokončena."
 
 #
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Zdroj aktualizací není k dispozici."
 
 #
