--- a/po/da.po
+++ b/po/da.po
@@ -10493,8 +10493,8 @@ msgstr "Der er mindst"
 
 #
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Der er mindst %s opdateringer tilgængelige."
+msgid "There are at least %d updates available."
+msgstr "Der er mindst %d opdateringer tilgængelige."
 
 #
 msgid "There are currently no outstanding actions."
@@ -11349,7 +11349,7 @@ msgid "Update has completed."
 msgstr "Opdatering er færdiggjort."
 
 #
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Opdateringsservice er ikke tilgengælig."
 
 #
