--- a/po/de.po
+++ b/po/de.po
@@ -9140,8 +9140,8 @@ msgid "There are at least "
 msgstr "Es sind mindestens "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Es sind mindestens %s Aktualisierungen verfügbar."
+msgid "There are at least %d updates available."
+msgstr "Es sind mindestens %d Aktualisierungen verfügbar."
 
 msgid "There are currently no outstanding actions."
 msgstr "Es sind keine Aktivitäten geplant."
@@ -9865,7 +9865,7 @@ msgstr "Aktualisierung fehlgeschlagen. Ihr Receiver hat keine Verbindung zum Int
 msgid "Update has completed."
 msgstr "Aktualisierung abgeschlossen."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Update-Feed nicht verfügbar."
 
 msgid "Updating"
