--- a/po/el.po
+++ b/po/el.po
@@ -9112,8 +9112,8 @@ msgid "There are at least "
 msgstr "Υπάρχουν τουλάχιστον "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Υπάρχουν τουλάχιστον %s διαθέσιμες ενημερώσεις."
+msgid "There are at least %d updates available."
+msgstr "Υπάρχουν τουλάχιστον %d διαθέσιμες ενημερώσεις."
 
 msgid "There are currently no outstanding actions."
 msgstr "Δεν υπάρχουν ενέργειες σε εκκρεμότητα."
@@ -9834,7 +9834,7 @@ msgstr "Η ενημέρωση απέτυχε. Ο δέκτης σας δεν έχ
 msgid "Update has completed."
 msgstr "Η ενημέρωση έχει ολοκληρωθεί."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Η πηγή ενημερώσεων δεν είναι διαθέσιμη."
 
 msgid "Updating"
