--- a/po/et.po
+++ b/po/et.po
@@ -9232,8 +9232,8 @@ msgid "There are at least "
 msgstr "Seal on vähemalt "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Saadaval on vähemalt %s uuendust."
+msgid "There are at least %d updates available."
+msgstr "Saadaval on vähemalt %d uuendust."
 
 msgid "There are currently no outstanding actions."
 msgstr "Praegu ei ole täitmata tegevusi."
@@ -9986,7 +9986,7 @@ msgstr "Uuendamine nurjus. Vastuvõtjal puudub töötav internetiühendus."
 msgid "Update has completed."
 msgstr "Uuendamine on lõppenud."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Uuenduslink pole saadaval."
 
 msgid "Updating"
