--- a/po/fa.po
+++ b/po/fa.po
@@ -9454,7 +9454,7 @@ msgstr ""
 
 #
 #, fuzzy, python-format
-msgid "There are at least %s updates available."
+msgid "There are at least %d updates available."
 msgstr "به روز رسانی های در دسترس"
 
 msgid "There are currently no outstanding actions."
@@ -10157,7 +10157,7 @@ msgstr ""
 msgid "Update has completed."
 msgstr ""
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr ""
 
 msgid "Updating"
