--- a/po/fy.po
+++ b/po/fy.po
@@ -10609,7 +10609,7 @@ msgid "There are at least "
 msgstr ""
 
 #, python-format
-msgid "There are at least %s updates available."
+msgid "There are at least %d updates available."
 msgstr ""
 
 #
@@ -11447,7 +11447,7 @@ msgid "Update has completed."
 msgstr ""
 
 #
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr ""
 
 #
