--- a/po/gl.po
+++ b/po/gl.po
@@ -10211,8 +10211,8 @@ msgstr "Hai polo menos "
 
 #
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Hai polo menos %s actualizacións dispoñibles."
+msgid "There are at least %d updates available."
+msgstr "Hai polo menos %d actualizacións dispoñibles."
 
 #
 msgid "There are currently no outstanding actions."
@@ -11014,7 +11014,7 @@ msgstr "Fallou a actualización. O receptor non ten unha conexión a internet en
 msgid "Update has completed."
 msgstr "Completouse a instalación."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Fonte de actualizacións non dispoñible."
 
 #
