--- a/po/he.po
+++ b/po/he.po
@@ -9994,7 +9994,7 @@ msgid "There are at least "
 msgstr "There are at least "
 
 #, fuzzy, python-format
-msgid "There are at least %s updates available."
+msgid "There are at least %d updates available."
 msgstr ".אין עדכונים זמינים"
 
 #
@@ -10787,8 +10787,8 @@ msgid "Update has completed."
 msgstr ""
 
 #
-msgid "Updatefeed not available."
-msgstr "Updatefeed not available."
+msgid "Update feed not available."
+msgstr "Update feed not available."
 
 #
 msgid "Updating"
