--- a/po/id.po
+++ b/po/id.po
@@ -9413,8 +9413,8 @@ msgid "There are at least "
 msgstr "Setidaknya terdapat "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Setidaknya terdapat %s pembaruan tersedia."
+msgid "There are at least %d updates available."
+msgstr "Setidaknya terdapat %d pembaruan tersedia."
 
 msgid "There are currently no outstanding actions."
 msgstr "Saat ini tidak ada tindakan yg belum diselesaikan."
@@ -10163,7 +10163,7 @@ msgstr "Pembaruan gagal. Rx anda tanpa koneksi internet."
 msgid "Update has completed."
 msgstr "Pembaruan telah selesai."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Umpan pembaruan tidak tersedia."
 
 msgid "Updating"
