--- a/po/lt.po
+++ b/po/lt.po
@@ -9140,8 +9140,8 @@ msgid "There are at least "
 msgstr "Bent jau yra "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Yra bent %s galimi atnaujinimai."
+msgid "There are at least %d updates available."
+msgstr "Yra bent %d galimi atnaujinimai."
 
 msgid "There are currently no outstanding actions."
 msgstr "Šiuo metu nėra jokių neįvykdytų veiksmų."
@@ -9863,7 +9863,7 @@ msgstr "Atnaujinimo klaida. Jūsų imtuvas neturi interneto ryšio."
 msgid "Update has completed."
 msgstr "Atnaujinimas baigtas."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Atnaujinimo šaltinis nepasiekiamas."
 
 msgid "Updating"
