--- a/po/mk.po
+++ b/po/mk.po
@@ -9118,8 +9118,8 @@ msgid "There are at least "
 msgstr "Има најмалку "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Има најмалку %s достапни ажурирања."
+msgid "There are at least %d updates available."
+msgstr "Има најмалку %d достапни ажурирања."
 
 msgid "There are currently no outstanding actions."
 msgstr "Не се планираат активности."
@@ -9840,7 +9840,7 @@ msgstr "Ажурирањето не успеа. Вашиот приемник н
 msgid "Update has completed."
 msgstr "Ажурирањето е завршено."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Ажурирање не е достапно."
 
 msgid "Updating"
