--- a/po/nb.po
+++ b/po/nb.po
@@ -10161,8 +10161,8 @@ msgid "There are at least "
 msgstr "Det er minst "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Det er minst %s oppdateringer tilgjengelig."
+msgid "There are at least %d updates available."
+msgstr "Det er minst %d oppdateringer tilgjengelig."
 
 #
 msgid "There are currently no outstanding actions."
@@ -10968,7 +10968,7 @@ msgstr "Oppdateringen mislyktes. Internett forbindelsen til mottakeren fungerer 
 msgid "Update has completed."
 msgstr "Oppdateringen er ferdig."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Oppdateringssted er ikke tilgjengelig."
 
 msgid "Updating"
