--- a/po/nl.po
+++ b/po/nl.po
@@ -9387,8 +9387,8 @@ msgid "There are at least "
 msgstr "Er zijn ten minste "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Er zijn minimaal %s updates beschikbaar."
+msgid "There are at least %d updates available."
+msgstr "Er zijn minimaal %d updates beschikbaar."
 
 msgid "There are currently no outstanding actions."
 msgstr "Er zijn geen uitstaande acties."
@@ -10121,8 +10121,8 @@ msgstr "Update mislukt. Uw ontvanger heeft geen actieve internetaansluiting."
 msgid "Update has completed."
 msgstr "De update is gereed."
 
-msgid "Updatefeed not available."
-msgstr "Updatefeed niet beschikbaar."
+msgid "Update feed not available."
+msgstr "Update feed niet beschikbaar."
 
 msgid "Updating"
 msgstr "Bezig met update"
