--- a/po/nn.po
+++ b/po/nn.po
@@ -10114,8 +10114,8 @@ msgid "There are at least "
 msgstr "Det finnes minst"
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Det er minst %s oppdateringer tilgjengelig."
+msgid "There are at least %d updates available."
+msgstr "Det er minst %d oppdateringer tilgjengelig."
 
 #
 msgid "There are currently no outstanding actions."
@@ -10929,7 +10929,7 @@ msgstr "Oppdateringen mislyktes. Mottakeren mangler internettforbindelse."
 msgid "Update has completed."
 msgstr "Oppdateringen er ferdig."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Oppdateringsstedet er ikke tilgjengelig."
 
 #
