--- a/po/pl.po
+++ b/po/pl.po
@@ -9145,8 +9145,8 @@ msgid "There are at least "
 msgstr "Jest co najmniej"
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Dostępnych co najmniej  %s aktualizacji."
+msgid "There are at least %d updates available."
+msgstr "Dostępnych co najmniej %d aktualizacji."
 
 msgid "There are currently no outstanding actions."
 msgstr "Obecnie nie ma zaległych działań."
@@ -9868,7 +9868,7 @@ msgstr "Aktualizacja nie powiodła się. Brak działającego połączenia intern
 msgid "Update has completed."
 msgstr "Aktualizacja zakończona."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Aktualizacje nie dostępne."
 
 msgid "Updating"
