--- a/po/pt.po
+++ b/po/pt.po
@@ -10708,8 +10708,8 @@ msgstr "Existem pelo menos "
 
 #
 #, fuzzy, python-format
-msgid "There are at least %s updates available."
-msgstr "Existem pelo menos %s actualizações disponíveis."
+msgid "There are at least %d updates available."
+msgstr "Existem pelo menos %d actualizações disponíveis."
 
 #
 msgid "There are currently no outstanding actions."
@@ -11552,7 +11552,7 @@ msgid "Update has completed."
 msgstr "A actualização foi concluída."
 
 #
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Servidor de actualizações não disponível"
 
 #
