--- a/po/ro.po
+++ b/po/ro.po
@@ -9454,7 +9454,7 @@ msgid "There are at least "
 msgstr ""
 
 #, python-format
-msgid "There are at least %s updates available."
+msgid "There are at least %d updates available."
 msgstr ""
 
 msgid "There are currently no outstanding actions."
@@ -10199,7 +10199,7 @@ msgstr ""
 msgid "Update has completed."
 msgstr ""
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr ""
 
 msgid "Updating"
