--- a/po/ru.po
+++ b/po/ru.po
@@ -9137,8 +9137,8 @@ msgid "There are at least "
 msgstr "Найдено по крайней мере "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "%s доступных обновлений для вашего ресивера."
+msgid "There are at least %d updates available."
+msgstr "%d доступных обновлений для вашего ресивера."
 
 msgid "There are currently no outstanding actions."
 msgstr "В текущий момент нет выдающихся действий."
@@ -9860,7 +9860,7 @@ msgstr "Обновление не удалось. В Вашем ресивере
 msgid "Update has completed."
 msgstr "Обновление завершено."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Обновления с фида не доступны."
 
 msgid "Updating"
