--- a/po/sk.po
+++ b/po/sk.po
@@ -9140,8 +9140,8 @@ msgid "There are at least "
 msgstr "Existuje najmenej "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "K dispozícií je najmenej %s aktualizácií."
+msgid "There are at least %d updates available."
+msgstr "K dispozícií je najmenej %d aktualizácií."
 
 msgid "There are currently no outstanding actions."
 msgstr "Momentálne nie sú žiadne nevykonané akcie."
@@ -9863,7 +9863,7 @@ msgstr "Aktualizácia zlyhala. Váš prijímač nemá funkčné pripojenie k int
 msgid "Update has completed."
 msgstr "Aktualizácia bola dokončená."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Zdroj aktualizácií nie je k dispozícií."
 
 msgid "Updating"
