--- a/po/sr.po
+++ b/po/sr.po
@@ -10758,7 +10758,7 @@ msgstr "Postoji najmanje"
 
 #
 #, fuzzy, python-format
-msgid "There are at least %s updates available."
+msgid "There are at least %d updates available."
 msgstr "Nema dostupnih ažuriranja."
 
 #
@@ -11597,7 +11597,7 @@ msgid "Update has completed."
 msgstr ""
 
 #
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Fid ažuriranja nije dostupan."
 
 #
