--- a/po/sv.po
+++ b/po/sv.po
@@ -10456,8 +10456,8 @@ msgstr "Det finns minst "
 
 #
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Det finns minst %s uppdateringar tillgängliga."
+msgid "There are at least %d updates available."
+msgstr "Det finns minst %d uppdateringar tillgängliga."
 
 #
 msgid "There are currently no outstanding actions."
@@ -11313,7 +11313,7 @@ msgid "Update has completed."
 msgstr "Uppdatering har slutförts."
 
 #
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Uppdateringsfeed ej tillgänglig."
 
 #
