--- a/po/th.po
+++ b/po/th.po
@@ -9498,7 +9498,7 @@ msgid "There are at least "
 msgstr "อย่างน้อยต้องมี"
 
 #, fuzzy, python-format
-msgid "There are at least %s updates available."
+msgid "There are at least %d updates available."
 msgstr " มีรายการปรับปรุง"
 
 msgid "There are currently no outstanding actions."
@@ -10245,7 +10245,7 @@ msgstr ""
 msgid "Update has completed."
 msgstr ""
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr ""
 
 msgid "Updating"
