--- a/po/tr.po
+++ b/po/tr.po
@@ -9313,8 +9313,8 @@ msgid "There are at least "
 msgstr "En az "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Yeni %s güncellemeler bulundu."
+msgid "There are at least %d updates available."
+msgstr "Yeni %d güncellemeler bulundu."
 
 msgid "There are currently no outstanding actions."
 msgstr "Seçilmiş bir görev yok."
@@ -10069,7 +10069,7 @@ msgstr "Güncelleme başarısız oldu. Alıcınızda bir İnternet bağlantısı
 msgid "Update has completed."
 msgstr "Güncelleme tamamladı."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Güncelleme sunucusu kullanılamıyor."
 
 msgid "Updating"
