--- a/po/uk.po
+++ b/po/uk.po
@@ -9139,8 +9139,8 @@ msgid "There are at least "
 msgstr "Є принаймні "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Доступно щонайменше %s оновлень."
+msgid "There are at least %d updates available."
+msgstr "Доступно щонайменше %d оновлень."
 
 msgid "There are currently no outstanding actions."
 msgstr "В даний час немає невиконаних дій."
@@ -9862,7 +9862,7 @@ msgstr "Оновлення не вдалося. У Вашому приймачі
 msgid "Update has completed."
 msgstr "Оновлення завершено."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Канал Оновленя не доступний."
 
 msgid "Updating"
