--- a/po/vi.po
+++ b/po/vi.po
@@ -9100,8 +9100,8 @@ msgid "There are at least "
 msgstr "Có ít nhất "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Có ít nhất%s cập nhật có sẵn."
+msgid "There are at least %d updates available."
+msgstr "Có ít nhất %d cập nhật có sẵn."
 
 msgid "There are currently no outstanding actions."
 msgstr "Hiện tại không có hành động nổi bật."
@@ -9821,7 +9821,7 @@ msgstr "Cập nhật thất bại. Đầu thu của bạn không có kết nối
 msgid "Update has completed."
 msgstr "Cập nhật đã hoàn thành."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Cập nhật nguồn cấp dữ liệu không có sẵn."
 
 msgid "Updating"
