--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -9117,8 +9117,8 @@ msgid "There are at least "
 msgstr "至少有 "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "有一个最近更新 %s 可用."
+msgid "There are at least %d updates available."
+msgstr "有一个最近更新 %d 可用."
 
 msgid "There are currently no outstanding actions."
 msgstr "目前没有异常."
@@ -9839,7 +9839,7 @@ msgstr "更新失败.接收机没有可用的互联网连接."
 msgid "Update has completed."
 msgstr "升级已完成."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "更新资源无效."
 
 msgid "Updating"
