--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -9197,7 +9197,7 @@ msgid "There are at least "
 msgstr "這裏至少有 "
 
 #, python-format
-msgid "There are at least %s updates available."
+msgid "There are at least %d updates available."
 msgstr ""
 
 msgid "There are currently no outstanding actions."
@@ -9920,7 +9920,7 @@ msgstr ""
 msgid "Update has completed."
 msgstr ""
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr ""
 
 msgid "Updating"
