--- a/po/ca.po
+++ b/po/ca.po
@@ -10213,8 +10213,8 @@ msgid "There are at least "
 msgstr "N’hi ha almenys"
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Hi ha almenys% s actualitzacions disponibles."
+msgid "There are at least %d updates available."
+msgstr "Hi ha almenys %d actualitzacions disponibles."
 
 #
 msgid "There are currently no outstanding actions."
@@ -11017,7 +11017,7 @@ msgid "Update has completed."
 msgstr "S’ha finalitzat l’actualització."
 
 #
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Actualització no disponible."
 
 #
