--- a/po/es.po
+++ b/po/es.po
@@ -10201,8 +10201,8 @@ msgstr "Hay al menos"
 
 #
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Hay por lo menos% s actualizaciones disponibles."
+msgid "There are at least %d updates available."
+msgstr "Hay por lo menos %d actualizaciones disponibles."
 
 #
 msgid "There are currently no outstanding actions."
@@ -11005,8 +11005,8 @@ msgstr "Error en la actualización. Su receptor no tiene una conexión a Interne
 msgid "Update has completed."
 msgstr "Se ha completado la actualización."
 
-msgid "Updatefeed not available."
-msgstr "Updatefeed no disponible."
+msgid "Update feed not available."
+msgstr "Update feed no disponible."
 
 #
 msgid "Updating"
