--- a/po/fi.po
+++ b/po/fi.po
@@ -10304,8 +10304,8 @@ msgid "There are at least "
 msgstr "Saatavilla ainakin "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Vähintään %s päivitystä saatavilla."
+msgid "There are at least %d updates available."
+msgstr "Vähintään %d päivitystä saatavilla."
 
 msgid "There are currently no outstanding actions."
 msgstr "Ei suorittamattomia tehtäviä."
@@ -11111,7 +11111,7 @@ msgstr "Päivitys epäonnistui. Vastaanottimellasi ei ole toimivaa internet yhte
 msgid "Update has completed."
 msgstr "Päivitys on valmis."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Päivityslähde ei ole saatavilla."
 
 #
