--- a/po/fr.po
+++ b/po/fr.po
@@ -9126,8 +9126,8 @@ msgid "There are at least "
 msgstr "Il y a au moins "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Il y a au moins %s mises à jour disponibles."
+msgid "There are at least %d updates available."
+msgstr "Il y a au moins %d mises à jour disponibles."
 
 msgid "There are currently no outstanding actions."
 msgstr "Il n'y a actuellement aucune action marquante."
@@ -9852,7 +9852,7 @@ msgstr "La mise à jour a échoué. Votre récepteur ne dispose pas de connexion
 msgid "Update has completed."
 msgstr "La mise à jour est terminée."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "MAJ feed non disponible."
 
 msgid "Updating"
