--- a/po/hr.po
+++ b/po/hr.po
@@ -9140,8 +9140,8 @@ msgid "There are at least "
 msgstr "Postoje najmanje "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Dostupno je najmanje %s ažuriranja."
+msgid "There are at least %d updates available."
+msgstr "Dostupno je najmanje %d ažuriranja."
 
 msgid "There are currently no outstanding actions."
 msgstr "Trenutno nema otvorenih aktivnosti."
@@ -9863,7 +9863,7 @@ msgstr "Ažuriranje nije uspjelo. Vaš prijemnik nema aktivnu internetsku vezu."
 msgid "Update has completed."
 msgstr "Ažuriranje je dovršeno."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Ažuriranje feeda nije dostupno."
 
 msgid "Updating"
