--- a/po/hu.po
+++ b/po/hu.po
@@ -9131,8 +9131,8 @@ msgid "There are at least "
 msgstr "Legalább "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Legalább %s frissítés elérhető."
+msgid "There are at least %d updates available."
+msgstr "Legalább %d frissítés elérhető."
 
 msgid "There are currently no outstanding actions."
 msgstr "Semmilyen kiemelkedő esemény nem következik."
@@ -9854,7 +9854,7 @@ msgstr "A frissítés nem sikerült. A készüléknek nincs egy működőképes 
 msgid "Update has completed."
 msgstr "A frissítés elkészült."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Frissítő szerver nem elérhető."
 
 msgid "Updating"
