--- a/po/is.po
+++ b/po/is.po
@@ -10438,7 +10438,7 @@ msgid "There are at least "
 msgstr "Það eru allavega "
 
 #, fuzzy, python-format
-msgid "There are at least %s updates available."
+msgid "There are at least %d updates available."
 msgstr "Það er engin uppfærsla tiltæk."
 
 msgid "There are currently no outstanding actions."
@@ -11259,7 +11259,7 @@ msgstr ""
 msgid "Update has completed."
 msgstr ""
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Uppfærslur á fæðirásum ekki tiltækar."
 
 #
