--- a/po/it.po
+++ b/po/it.po
@@ -9187,8 +9187,8 @@ msgid "There are at least "
 msgstr "Sono presenti almeno "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Sono presenti almeno %s aggiornamenti disponibili."
+msgid "There are at least %d updates available."
+msgstr "Sono presenti almeno %d aggiornamenti disponibili."
 
 msgid "There are currently no outstanding actions."
 msgstr "Nessuna azione in sospeso al momento."
@@ -9922,7 +9922,7 @@ msgstr "Aggiornamento non riuscito. Il ricevitore non è connesso ad Internet."
 msgid "Update has completed."
 msgstr "Aggiornamento completato."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Fonte degli aggiornamenti non disponibile."
 
 msgid "Updating"
