--- a/po/ku.po
+++ b/po/ku.po
@@ -9275,8 +9275,8 @@ msgid "There are at least "
 msgstr "There are at least "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "There are at least %s updates available."
+msgid "There are at least %d updates available."
+msgstr "There are at least %d updates available."
 
 msgid "There are currently no outstanding actions."
 msgstr "There are currently no outstanding actions."
@@ -10013,8 +10013,8 @@ msgstr "Update failed. Your receiver does not have a working internet connection
 msgid "Update has completed."
 msgstr "Update has completed."
 
-msgid "Updatefeed not available."
-msgstr "Updatefeed not available."
+msgid "Update feed not available."
+msgstr "Update feed not available."
 
 msgid "Updating"
 msgstr "Updating"
