--- a/po/lv.po
+++ b/po/lv.po
@@ -9142,8 +9142,8 @@ msgid "There are at least "
 msgstr "Vismaz "
 
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Vismaz %s atjauninājumi pieejami."
+msgid "There are at least %d updates available."
+msgstr "Vismaz %d atjauninājumi pieejami."
 
 msgid "There are currently no outstanding actions."
 msgstr "Pašlaik nav aktuālu darbību."
@@ -9865,7 +9865,7 @@ msgstr "Atjaunināšana pārtraukta. Uztvērējam nestrādā interneta savienoju
 msgid "Update has completed."
 msgstr "Atjaunināšana pabeigta."
 
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Barotnes nav pieejamas."
 
 msgid "Updating"
