--- a/po/sl.po
+++ b/po/sl.po
@@ -10688,8 +10688,8 @@ msgstr "Obstaja vsaj"
 
 #
 #, python-format
-msgid "There are at least %s updates available."
-msgstr "Na voljo je %s nadgradenj."
+msgid "There are at least %d updates available."
+msgstr "Na voljo je %d nadgradenj."
 
 #
 msgid "There are currently no outstanding actions."
@@ -11522,7 +11522,7 @@ msgid "Update has completed."
 msgstr "Posodobitev se je uspešno zaključila."
 
 #
-msgid "Updatefeed not available."
+msgid "Update feed not available."
 msgstr "Server je trenutno nedosegljiv."
 
 #
